--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,10 @@
+2010-02-05  Corrado Primier  <bardo@aur.archlinux.org>
+
+	* Version bump: 0.9.1
+
+	* rss-gx.patch: removed, it's unnecessary
+
+
 2008-10-23  Corrado Primier  <bardo@aur.archlinux.org>
 
 	* Version bump: 0.8.2
