--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,10 @@
+2010-02-22  Eric Belanger  <eric@archlinux.org>
+
+	* auctex 11.86-1
+	* Upstream update
+	* Removed texinfo depends
+	* Fixed install scriptlet
+
 2009-09-02  Eric Belanger  <eric@archlinux.org>
 
 	* auctex 11.85-2
@@ -5,9 +12,9 @@
 	* Added info file support
 	* Updated tetex depends to texlive-core
 	* Removed post-update message
-	
+
 2008-03-02  Eric Belanger  <eric@archlinux.org>
 
 	* auctex 11.85-1
-	* upstream update
-	* updated license
+	* Upstream update
+	* Updated license
