upgpkg: rss-glx 0.9.1-2 added gnome screensaver support and fix support for kde by adding symlinks to /usr/lib/xscreensaver
git-svn-id: file:///srv/repos/svn-community/svn@12932 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,9 @@
+2010-03-15  Ionut Biru <ibiru@archlinux.org>
+
+	* bug fixes: 0.9.1-2
+	* added gnome .desktop files and added symlink to
+	/usr/lib/xscreensaver FS#18300
+
 2010-02-05  Corrado Primier  <bardo@aur.archlinux.org>
 
 	* Version bump: 0.9.1
