--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,6 @@
+2010-03-17 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+	* Update to major release v2.2
+
 2009-12-19 Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
 	* Update to major release v2.1
 
